--- a/style.css
+++ b/style.css
@@ -10,6 +10,15 @@ body {
     background: #f4f5f7;
 }
 
+.Kanban__board-status {
+    display: flex;
+    justify-content: center;
+    border: .2rem dashed #000;
+    padding: 1rem;
+    font-family: Poppins, sans-serif;
+    font-size: 1.2rem;
+}
+
 .kanban {
     display: flex;
     flex-direction: row;
