--- a/style.css
+++ b/style.css
@@ -70,20 +70,38 @@ body {
     color: #616161;
 }
 
+.kanban__item-mainc {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.kanban__item-fc {
+    background: #FFF;
+    border-radius: .25rem;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 1px 0px #00000080;
+    width: 100%;
+}
+
+.kanban__item-drag-area {
+    display: flex;
+    justify-content: center;
+    cursor: grab;
+}
+
+.rotate90-icon {
+    transform: rotate(90deg);
+    font-size: 15px;
+}
+
 .kanban__item-input {
     background: #FFF;
     cursor: pointer;
     padding: .5rem .4rem;
     border-radius: .2rem;
     box-shadow: 0px 0px 1px 0px #00000080;
-    width: 100%;
-}
-
-.kanban__item-input-options {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    align-items: flex-start;
 }
 
 .kanban__item-options {
@@ -92,7 +110,7 @@ body {
 
 .kanban__item-options .more-options {
     z-index: 1;
-    bottom: -20px;
+    bottom: 0px;
     right: 25px;
     padding: .5rem .1rem;
     background: #fff;
@@ -100,7 +118,7 @@ body {
     border-radius: .25rem;
     transform: scale(0);
     transform-origin: top right;
-    box-shadow: 0 0 6px 1px rgb(0 0 0 / 15%);
+    box-shadow: 0 0 4px 4px rgb(0 0 0 / 15%);
     transition: transform 0.2s ease;
 }
 
